tests/security/taintedInputViaPureStaticFunction/output.txt
ERROR: TaintedData - input.hack:9:14 - Detected tainted HTML tags